# specdeck

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  harness.json  llms.txt  skills-lock.json
.githooks/: commit-msg
.githooks/commit-msg.d/: conventional-commits.sh
.githooks/pre-commit.d/: local-memory.sh  pre-commit-hooks.sh
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/specs/001-branding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/001-branding/contracts/: design-system.md
.specify/specs/002-web-mock/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/003-projects/: data-model.md  plan.md  research.md  spec.md  tasks.md
.specify/specs/004-github-workspace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
backend/: .dockerignore  Dockerfile.agent  Dockerfile.gateway  README.md  pyproject.toml
backend/agent/: langgraph.json  pyproject.toml
backend/agent/src/specdeck_agent/: __init__.py  graph.py
backend/gateway/: alembic.ini  pyproject.toml
backend/gateway/src/specdeck_gateway/: __init__.py  config.py  db.py  main.py
backend/gateway/src/specdeck_gateway/core/: crypto.py  pathsafe.py
backend/gateway/src/specdeck_gateway/migrations/: env.py
backend/gateway/src/specdeck_gateway/migrations/versions/: 66fa175b6661_init_workspace_provisioning.py
backend/gateway/src/specdeck_gateway/models/: __init__.py  enums.py  git_connection.py  project.py  provisioning_job.py
backend/gateway/src/specdeck_gateway/routers/: __init__.py  github.py  workspace.py
backend/gateway/src/specdeck_gateway/services/: git_ops.py  github_oauth.py  provisioning.py  streaming.py
backend/gateway/tests/: conftest.py  test_browse.py  test_crypto.py  test_git_ops.py  test_git_progress.py  test_github_oauth.py  test_github_router.py  test_link.py  test_pathsafe.py  test_provisioning.py  test_reconcile.py  test_workspace_router.py
backend/shared/: pyproject.toml
backend/shared/src/specdeck_shared/: __init__.py  models.py
docs/: DESIGN.md  glossary.md  references.md
docs/design-docs/: agent-architecture.md  board-columns.md  review-merge-flow.md  spec-contract-model.md  spec-format.md  stack.md  web-dual-surface-routing.md
web/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.mts  vitest.setup.ts
web/public/brand/: README.md
web/src/: env.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/board/: page.tsx  (+2 more)
web/src/components/: app-bar.tsx  theme-provider.tsx  theme-toggle.tsx
web/src/hooks/: use-provisioning-events.ts  use-reduced-motion.ts
web/src/lib/: board-state.ts  board-summary.ts  check-progress.ts  default-tab.ts  workspace-reducer.ts
web/src/mock/: landing.ts  notifications.ts  projects.ts  specs.ts  types.ts
(+82 files in other folders)
