[project]
name = "specdeck-agent"
version = "0.1.0"
description = "SpecDeck LangGraph agent server — Planner / Builder / Checker graphs"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-cli[inmem]>=0.1.55",
    "redis>=5.0",
    "specdeck-shared",
]

[tool.uv.sources]
specdeck-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specdeck_agent"]
