[project]
name = "specdeck-gateway"
version = "0.1.0"
description = "SpecDeck FastAPI gateway — REST + SSE bridge to the LangGraph agent server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "redis>=5.0",
    "httpx>=0.27",
    "langgraph-sdk>=0.1.40",
    "specdeck-shared",
]

[tool.uv.sources]
specdeck-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specdeck_gateway"]
