[project]
name = "specdeck-gateway"
version = "0.1.0"
description = "SpecDeck FastAPI gateway — REST + SSE bridge to the LangGraph agent server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "redis>=5.0",
    "httpx>=0.27",
    "langgraph-sdk>=0.1.40",
    "specdeck-shared",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30",
    "alembic>=1.16",
    "cryptography>=44.0",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
    "aiosqlite>=0.20",
]

[tool.uv.sources]
specdeck-shared = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specdeck_gateway"]
